--- a/src/api/config/routes.yaml
+++ b/src/api/config/routes.yaml
@@ -1,15 +1,4 @@
-# controllers:
-#     resource:
-#         path: ../src/Controller/
-#         namespace: App\Controller
-#     type: attribute
-# config/routes.yaml
-user_routes:
-  resource: '../src/User/Infrastructure/Routes/user.yaml'
-  prefix: /api/users
-  type: yaml
-
-post_routes:
-  resource: '../src/Post/Infrastructure/Routes/post.yaml'
-  prefix: /api/posts
+payment_routes:
+  resource: '../src/Payment/Infrastructure/Routes/payment.yaml'
+  prefix: /api/payment
   type: yaml
