cleaning code and few fixes

--- a/src/api/.env
+++ b/src/api/.env
@@ -32,7 +32,7 @@ DATABASE_URL="postgresql://postgresql:postgresql@database:5432/database?serverVe
 
 ACI_API_KEY="OGE4Mjk0MTc0YjdlY2IyODAxNGI5Njk5MjIwMDE1Y2N8c3k2S0pzVDg="
 ACI_ENTITY_ID="8a8294174b7ecb28014b9699220015ca"
-SHIFT4_API_KEY=""
+SHIFT4_API_KEY="sk_test_Y77mbcxIxle3QLgAwX93nfux"
 
 SHIFT4_API_URL="https://api.shift4.com/charges"
 ACI_API_URL="https://eu-test.oppwa.com/v1/payments"
