--- a/src/api/.env
+++ b/src/api/.env
@@ -30,8 +30,8 @@ APP_SECRET=0269140ed57d428a361e8dbfa237ae08
 DATABASE_URL="postgresql://postgresql:postgresql@database:5432/database?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
-ACI_API_KEY="OGE4Mjk0MTc0YjdlY2IyODAxNGI5Njk5MjIwMDE1Y2N8c3k2S0pzVDg="
-ACI_ENTITY_ID="8a8294174b7ecb28014b9699220015ca"
+ACI_API_KEY=""
+ACI_ENTITY_ID=""
 SHIFT4_API_KEY=""
 
 SHIFT4_API_URL="https://api.shift4.com/charges"
